src/components/Sections/Sections.module.scss
@use '@/variables.scss' as *;

.section {
  display: flex;
  flex-flow: column;
  padding: 4rem max(calc(50% - 620px), calc(2rem + env(safe-area-inset-right)), 5%) 4rem
    max(calc(50% - 620px), calc(2rem + env(safe-area-inset-left)), 5%);

  & > h2 {
    margin: 0;
    color: #545454;
    font-weight: 300;
    font-size: 28px;
    text-align: center;
    scroll-margin-top: $navbar-height;
  }

  & > div {
    display: flex;
    gap: 2rem;
    justify-content: center;
    align-items: center;
    padding-top: 1.5rem;
    text-align: justify;

    & > a {
      display: flex;
      flex-flow: column;
      gap: 1rem;
      justify-content: center;
      align-items: center;
      max-height: 34vh;
      padding: 1rem;
      color: #fff;
      text-align: center;
      transition: all 0.15s ease;

      @media only screen and (hover: hover) {
        &:hover {
          background: #9f1730 !important;
        }
      }
    }
  }

  & > p {
    width: min(24rem, 98%);
    margin: 1rem auto;
    text-align: center;
  }

  & > .grid {
    display: grid;
    margin: 1rem auto 4rem;

    & > img {
      width: 100%;
    }

    &.gridServices {
      grid-template: auto / repeat(3, 1fr);
      gap: 2rem;
      width: min(54rem, 100%);

      & > div {
        display: flex;
        flex-flow: column;
        gap: 2%;
        justify-content: center;
        align-items: center;
        min-width: 100%;
        min-height: 100%;
        padding: 10%;
        border-radius: 10px;
        background: #fff;
        box-shadow: 2px 3px 7px 0 rgba(0, 0, 0, 0.06);
        line-height: 1.4rem;
        text-align: center;
        aspect-ratio: 1;

        & > svg {
          width: 35%;
          min-height: 2rem;
          fill: #cf0a2c;
        }
      }
    }

    &.gridPartners {
      grid-template: auto / repeat(3, 1fr);
      max-width: 43rem;
      column-gap: clamp(1.2rem, 8vw, 5rem);
    }

    &.gridClients {
      grid-template: auto / repeat(5, 1fr);
      max-width: 55rem;
      column-gap: clamp(0.5rem, 3vw, 3rem);
    }
  }

  &.sectionGoldPartner > div > img {
    height: 100%;
    aspect-ratio: 18/7;
  }

  &.sectionQuestions {
    background-position: center center;
    background-size: cover;
    color: #fff;

    & > div {
      & > h2 {
        max-width: 23rem;
        font-weight: 300;
        letter-spacing: 0.5px;
        text-align: right;
      }

      & > a {
        width: 9rem;
        height: 4rem;
        background: #cf0a2c;
      }
    }
  }

  &.sectionServices {
    background: #f6f6f6;

    & > div {
      & > a {
        width: min(26%, 21rem);
        height: 12rem;
        background: #b50926;
        box-shadow: 2px 3px 7px 0 rgba(0, 0, 0, 0.4);

        font-size: 16px;

        & > svg {
          width: 4.5rem;
        }
      }
    }
  }

  &.sectionServicesList {
    background: #f0f0f0;
  }

  &.sectionClientsSample {
    background: #f0f0f0;

    & > span {
      width: clamp(70%, 22rem, 100%);
      margin: 1rem auto;
      text-align: center;
    }
  }

  /* stylelint-disable-next-line order/order */
  @media screen and (max-width: 900px) {
    & > .grid {
      &.gridServices {
        grid-template: repeat(3, 1fr) / none;
        grid-auto-flow: column;
        max-width: 38rem;
      }

      &.gridPartners {
        grid-template: auto / repeat(2, 1fr);
        max-width: 420px;
      }

      &.gridClients {
        grid-template: auto / repeat(4, 1fr);
      }
    }

    &.sectionServices > div {
      flex-flow: column;

      & > a {
        width: min(34rem, 100%);
      }
    }

    &.sectionGoldPartner > div {
      flex-flow: column;
    }
  }

  @media screen and (max-width: 480px) {
    & > .grid {
      &.gridServices {
        grid-template: auto / repeat(1, 1fr);
        grid-auto-flow: row;
        max-width: 16rem;
      }

      &.gridPartners {
        grid-template: auto / repeat(1, 1fr);
        max-width: 170px;
      }

      &.gridClients {
        grid-template: auto / repeat(2, 1fr);
      }
    }
  }
}

